# emulate

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  OtherReadMe.md  README.md  conanfile.py  conanfile.txt
.github/workflows/: build.yaml  build.yaml.disabled  build2.yaml  ci.yaml
Mos6502/: CMakeLists.txt
Mos6502/include/Mos6502/: Bus.h  Log.h  Memory.h  Mos6502.h  Tracer.h
Mos6502/src/: AddressMode.cpp  AddressMode.h  Bus.cpp  Log.cpp  Memory.cpp  Mos6502.cpp  Tracer.cpp
Mos6502/test/: AddressModeTest.cpp  KlausFunctional.cpp  KlausFunctional.h  Mos6502Test.cpp
cmake/: Common.cmake
harte/: CMakeLists.txt  single_step_tests.cpp  test_run.cpp
libs/apple2/: CMakeLists.txt
libs/apple2/console/: apple2test.cpp
libs/apple2/include/apple2/: apple2system.h  disk_controller.h  iodevice.h  slot_controller.h  text_video_device.h
libs/apple2/src/: apple2system.cpp  disk_controller.cpp  iodevice.cpp  text_video_device.cpp
libs/apple2/tests/: apple2test.cpp  disk_controller_helper.h  disk_controller_test.cpp
libs/common/: CMakeLists.txt
libs/common/include/common/: Bus.h  Memory.h  address.h  address_string_maker.h  bank_switcher.h  bus.h  fixed_formatter.h  logger.h  memory.h  microcode.h  microcode_pump.h
libs/common/src/: Bus.cpp  Memory.cpp  address.cpp  bank_switcher.cpp  bus.cpp  fixed_formatter.cpp  hex.cpp  logger.cpp  memory.cpp  microcode_pump.cpp
libs/common/test/: MemoryTest.cpp  address_test.cpp  bank_switcher_test.cpp  memory_test.cpp  microcode_pump_test.cpp
libs/core65xx/: CMakeLists.txt
libs/core65xx/include/core65xx/: address_mode.h  core65xx.h
libs/core65xx/src/: address_mode.cpp  core65xx.cpp
libs/core65xx/tests/: address_mode_test.cpp  core_cpu_test.cpp
libs/core_cpu/: CMakeLists.txt
libs/core_cpu/include/core_cpu/: core_cpu.h
libs/core_cpu/src/: core_cpu.cpp
libs/core_cpu/tests/: core_cpu_test.cpp
libs/cpu6502/: CMakeLists.txt
libs/cpu6502/include/cpu6502/: address_mode.h  cpu6502_types.h  logger.h  mos6502.h  registers.h  state.h
libs/cpu6502/src/: address_mode.cpp  cpu6502_types.cpp  logger.cpp  mos6502.cpp  state.cpp
libs/cpu6502/tests/: address_mode_test.cpp  helpers.cpp  helpers.h  mos6502_test.cpp  single_step_tests.cpp  test_reporter.cpp  test_reporter.h  test_run.cpp  test_run.h
libs/isa-mos6502/: CMakeLists.txt
libs/isa-mos6502/include/mos6502/: mos6502.h
libs/isa-mos6502/src/: mos6502.cpp
libs/trace65xx/: CMakeLists.txt
libs/trace65xx/include/trace65xx/: tracer65xx.h
libs/trace65xx/src/: tracer65xx.cpp
src/: CMakeLists.txt
src/cpu/: ArithmeticLogicUnit.h  alu.h  cpu.cpp  cpu.h  flags.h  program_counter.h  register.h
src/util/: bit_ops.h  hex.h  trace.h
test/: CMakeLists.txt  TestArithmeticLogicUnit.cpp  TestCpu.cpp  test_program_counter.cpp  test_register.cpp
tests/: CMakeLists.txt  KlausFunctional.cpp  KlausFunctional.h  Mos6502Test.cpp  single_step_tests.cpp
tools/: check-format.sh  clang-tidy.sh  configure.sh  create_profiles.sh  find-traps.py  setup_env.ps1  setup_env.sh  test_opcodes.py
util/: CMakeLists.txt
util/include/util/: hex.h
util/src/: hex.cpp
